# de-airflow-pipeline

./: .dockerignore  .gitignore  CLAUDE.md  CONTAINER_STRATEGY.md  Dockerfile  Dockerfile.salesforce  KUBERNETES.md  README.md  mise.toml  pyproject.salesforce.toml  pyproject.toml  release-please-config.json
.devcontainer/: README.md  devcontainer.json
.github/workflows/: airflow-tests.yaml  build-and-push-container.yml  docker-build-push.yaml  release-please.yaml
adrs/: 001-per-dag-container-images.md  002-pod-level-secret-mounting.md  003-external-secrets-operator.md  004-secret-management-alternatives.md  README.md
dags/: .airflowignore  salesforce_extraction_dag.py
dags/dbt/: .user.yml  Dockerfile  RUNBOOK.md  dbt_project.yml  profiles.yml  pyproject.toml  salesforce_dbt_transformation_dag.py
dags/dbt/macros/: cast_helpers.sql
dags/dbt/models/marts/: dim_salesforce_accounts.sql  fct_salesforce_opportunities.sql  opportunity_history_snapshot.sql  schema.yml
dags/dbt/models/staging/: schema.yml  stg_salesforce_accounts.sql  stg_salesforce_contacts.sql  stg_salesforce_opportunities.sql
dags/dbt/tests/: conftest.py  test_salesforce_dbt_transformation_dag.py  test_schema_naming_contract.py
dags/dbt/tests/error/: opportunity_amount_non_negative.sql  opportunity_history_snapshot_grain.sql
dags/dbt/tests/info/: opportunity_volume_diagnostic.sql
dags/dbt/tests/warn/: accounts_revenue_cast_failure_threshold.sql  opportunity_stage_drift.sql  raw_soft_freshness.sql
dags/postgres-ping/: postgres_ping_dag.py  pyproject.toml
dags/postgres-ping/tests/: conftest.py  test_postgres_ping_dag.py
dags/salesforce/: Dockerfile  pyproject.toml  salesforce_extraction_dag.py
dags/salesforce/tests/: conftest.py  test_salesforce_extraction_dag.py
de_airflow_pipeline/: __init__.py
docs/adr/: 001-cicd-pipeline-architecture.md  README.md
k3d/: AGENTS.md  README.md  cluster-config.yaml  values-airflow.yaml
k3d/manifests/: namespace.yaml  postgres-target.yaml
k3d/manifests/secrets/: README.md  postgres-credentials.yaml.template  salesforce-credentials.yaml.template
k3d/scripts/: airflow-verify.sh  cluster-create.sh  cluster-delete.sh  cluster-verify.sh  deploy-airflow.sh  full-setup.sh  image-load.sh  port-forward.sh  secrets-setup.sh  toolchain-validate.sh
openspec/changes/add-salesforce-silver-dbt-pipeline/: design.md  proposal.md
openspec/changes/add-salesforce-silver-dbt-pipeline/specs/salesforce-dbt-transformation-dag/: spec.md
openspec/changes/archive/2026-02-23-airflow3-dag-compatibility/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-23-airflow3-dag-compatibility/specs/salesforce-dag/: spec.md
openspec/changes/archive/2026-02-24-fix-airflow-extract-issues/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-24-fix-airflow-extract-issues/specs/postgres-ping-dag/: spec.md
openspec/changes/archive/2026-02-24-fix-airflow-extract-issues/specs/salesforce-dag/: spec.md
openspec/changes/archive/2026-02-26-fix-opportunity-soql-invalid-field/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-26-salesforce-incremental-watermark-extract/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-27-add-salesforce-silver-dbt-pipeline/: tasks.md
openspec/changes/archive/2026-02-27-fix-dbt-tmp-write-paths/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-04-align-dbt-schema-naming/: design.md  proposal.md  tasks.md
openspec/explorations/: 2026-02-27-salesforce-analytics-streamlit-ideas.md
openspec/specs/k3d-dev-environment/: spec.md
openspec/specs/postgres-ping-dag/: spec.md
openspec/specs/salesforce-dag/: spec.md
openspec/specs/salesforce-dbt-runtime-filesystem/: spec.md
openspec/specs/salesforce-dbt-transformation-dag/: spec.md
openspec/specs/salesforce-incremental-watermark-extract/: spec.md
openspec/specs/salesforce-modeled-schema-contract/: spec.md
openspec/specs/salesforce-staging-intermediate-modeling/: spec.md
plans/: prd.json  progress.txt
scripts/: setup_project  test-all-dags.sh
tests/: __init__.py  test_connections.py  test_dag_integrity.py  test_package_imports.py
(+8 files in other folders)
