[project]
name = "de-airflow-pipeline"
version = "0.1.0"
description = "Salesforce to PostgreSQL data pipeline with Airflow"
requires-python = ">=3.9"
dependencies = [
    "apache-airflow[kubernetes]==2.8.1",
    "apache-airflow-providers-postgres==5.10.0",
    "apache-airflow-providers-salesforce==5.6.0",
    "pandas==2.1.4",
    "psycopg2-binary==2.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]