[project]
name = "de-airflow-pipeline-dbt"
version = "0.1.0"
description = "Salesforce dbt transformation DAG with dbt runtime dependencies"
requires-python = ">=3.13,<3.14"
dependencies = [
    "apache-airflow>=3.1.5",
    "apache-airflow-providers-cncf-kubernetes>=9.0",
    "apache-airflow-providers-postgres>=6.5",
    "dbt-core>=1.10.0",
    "dbt-postgres>=1.10.0",
    "psycopg[binary]>=3.3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.setuptools]
py-modules = []
